# relux

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  flake.nix  index.html  justfile  release-please-config.json
.cargo/: config.toml
.githooks/: pre-commit
.github/: labeler.yml
.github/workflows/: ci.yml  docs.yml  labeler.yml  pages.yml  release-please.yml  release.yml
crates/relux-ast/: CHANGELOG.md  Cargo.toml
crates/relux-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/relux-cli/src/: check.rs  completer.rs  dump.rs  init.rs  lib.rs  new.rs  run.rs
crates/relux-cli/src/dbg/tui/: bordered.rs  context.rs  filterable.rs  help_overlay.rs  hotkey.rs  mod.rs  panel.rs  scrollable.rs  status_bar.rs  theme.rs  traits.rs  util.rs
crates/relux-cli/src/dbg/tui/core/: hotkey_registry.rs  mod.rs
crates/relux-cli/src/dbg/tui/modes/: mod.rs
crates/relux-cli/src/dbg/tui/modes/test_selector/: bar.rs  details.rs  files.rs  foo.rs  mod.rs
crates/relux-cli/src/history/: analysis.rs  format.rs  loader.rs  mod.rs
crates/relux-core/: CHANGELOG.md  Cargo.toml
crates/relux-core/src/: config.rs  diagnostics.rs  discover.rs  error.rs  lib.rs  table.rs
crates/relux-core/src/pure/: bifs.rs  mod.rs
crates/relux-debug/: Cargo.toml
crates/relux-debug/src/: lib.rs  log.rs  protocol.rs  server.rs
crates/relux-debug/src/protocol/: breakpointable.rs  mod.rs  state.rs
crates/relux-debug/src/protocol/handler/: breakpoint.rs  common.rs  mod.rs  session.rs  source.rs  test_select.rs
crates/relux-debug/src/protocol/message/: breakpoint.rs  event.rs  mod.rs  session.rs  source.rs  test_select.rs
crates/relux-ir/: CHANGELOG.md  Cargo.toml
crates/relux-ir/src/: block.rs  comment.rs  effect.rs  evaluator.rs  expr.rs  func.rs  ident.rs  interpolation.rs  lib.rs  lowering_context.rs  lowering_trait.rs  marker.rs  plan.rs  pure_sink.rs  reachable.rs  regex_validate.rs  shallow_env.rs  stmt.rs  tables.rs  test_def.rs  timeout.rs
crates/relux-lexer/: CHANGELOG.md  Cargo.toml
crates/relux-parser/: CHANGELOG.md  Cargo.toml
crates/relux-parser/src/: annotation.rs  block.rs  effect.rs  error.rs  expr.rs  fn_def.rs  ident.rs  import.rs  interpolation.rs  lib.rs  module.rs  need.rs  operator.rs  overlay.rs  prefix.rs  punctuation.rs  stmt.rs  test_def.rs  timeout.rs  token.rs  ws.rs
crates/relux-resolver/: CHANGELOG.md  Cargo.toml
crates/relux-resolver/src/: discover.rs  lib.rs  loader.rs  lower.rs
crates/relux-resolver/tests/: ir_block.rs  ir_comment.rs  ir_effect.rs  ir_evaluator.rs  ir_expr.rs  ir_func.rs  ir_ident.rs  ir_interpolation.rs  ir_lower.rs  ir_marker.rs  ir_plan.rs  ir_regex_validate.rs  ir_shallow_env.rs  ir_stmt.rs  ir_tables.rs  ir_test_def.rs  ir_timeout.rs
crates/relux-runtime/: CHANGELOG.md  Cargo.toml  build.rs
crates/relux-runtime/src/: cancel.rs  lib.rs  marker_walk.rs  runtime_context.rs  scan.rs  viewer.rs
crates/relux-runtime/src/effect/: mod.rs  registry.rs
crates/relux-runtime/src/observe/: event_log.rs  event_sink.rs  mod.rs  progress.rs  tui.rs
crates/relux-runtime/src/observe/structured/: artifact.rs  buffer.rs  builder.rs  event.rs  failure.rs  log_sink.rs  mod.rs  shell.rs  skip.rs  span.rs  utf8_stream.rs
crates/relux-runtime/src/observe/structured/builder/: diagnostics.rs  io.rs  lifecycle.rs  matching.rs  values.rs
crates/relux-runtime/src/report/: console.rs  event_html.rs  highlight-relux.js  hljs_init.rs  html.rs  junit.rs  mod.rs  result.rs  run_index.css  run_index.js  run_index.rs  run_summary.rs  tap.rs
crates/relux-runtime/src/vm/: bifs.rs  buffer.rs  context.rs  mod.rs  pty.rs
docs/: built-in-functions.md  ci-integration.md  configuration.md  landing.html  planned-features.md  pure_functions.md  semantics.md  syntax.md
docs/dsl-tutorial/: 00-introduction.md  01-installation.md  02-getting-started.md  03-send-match-and-logs.md  04-the-output-buffer.md  05-built-in-functions.md  06-variables.md  07-regex-matching.md  08-functions.md  09-timeouts.md  10-fail-patterns.md  11-effects-and-dependencies.md  12-pure-functions.md  13-cleanup.md  14-modules-and-imports.md  15-condition-markers.md  16-the-cli.md  A1-best-practices.md  SUMMARY.md  book.toml
docs/reference/: 00-semantics.md  01-configuration.md  02-syntax.md  03-built-in-functions.md  04-ci-integration.md  05-test-log-viewer.md  06-events-json-schema.md  SUMMARY.md  book.toml
docs/rfc/: R001-pure-functions.md  R002-best-effort-cleanup.md  R003-lexer-parser-rework.md  R004-resolver-rework.md  R005-runtime-rework.md  R006-multiple-marker-semantics.md  R007-overlay-identity.md  R008-effects-rework.md  README.md  unified-events.md
docs/suite-tutorial/: 00-project-setup.md  01-testing-the-database.md  02-extracting-a-library.md  03-effects-and-dependencies.md  04-shared-dependencies.md  05-parallel-execution.md  SUMMARY.md  highlight-relux.js
docs/tutorial/: 00-introduction.md  01-installation.md  02-getting-started.md  03-send-match-and-logs.md  04-the-output-buffer.md  05-built-in-functions.md  06-variables.md  07-regex-matching.md  08-functions.md  09-timeouts.md  10-fail-patterns.md  11-effects-and-dependencies.md  12-cleanup.md  12-effects-and-dependencies.md  12-pure-functions.md  13-effects-and-dependencies.md  13-pure-functions.md  14-cleanup.md  14-modules-and-imports.md  15-condition-markers.md  16-the-cli.md  A1-best-practices.md  _plan.md
editors/intellij/: .gitignore  README.md  (+3 more)
examples/: bif_test.relux  echo_test.relux  syntax_demo.relux
latest/: index.html
rfc/: R001-pure-functions.md  R002-best-effort-cleanup.md  R007-overlay-identity.md  R008-effects-rework.md  R009-variable-match.md  R010-tui-debugger.md  R011-expose-variables.md  R012-tui-debugger.md  README.md
src/: config.rs  error.rs  evaluator.rs  lib.rs  stack.rs  table.rs
tests/: README.md  Relux.toml
tests/rdp-client/: Cargo.toml  build.rs
tests/rdp-client/src/: connect.rs  error.rs  main.rs  message.rs  request.rs
viewer/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+650 files in other folders)
