[package]
name = "relux"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "token_dump"
path = "bin/token_dump.rs"

[[bin]]
name = "ast_dump"
path = "bin/ast_dump.rs"

[[bin]]
name = "ir_dump"
path = "bin/ir_dump.rs"

[[bin]]
name = "relux_run"
path = "bin/relux_run.rs"

[dependencies]
logos = { version = "~0.16" }
chumsky = { version = "~0.12" }
daggy = { version = "~0.9" }
humantime = { version = "~2.3" }
tokio = { version = "1", features = ["full"] }
pty-process = { version = "~0.5", features = ["async"] }
regex = "~1"
async-recursion = "~1"
chrono = "~0.4"
rand = "~0.10"
bs58 = "~0.5"
ariadne = "~0.6"
async-trait = "~0.1"
uuid = { version = "~1", features = ["v4"] }
