[package]
name = "relux"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relux"
path = "bin/relux.rs"

[dependencies]
logos = { version = "~0.16" }
chumsky = { version = "~0.12" }
daggy = { version = "~0.9" }
humantime = { version = "~2.3" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "process", "sync"] }
pty-process = { version = "~0.5", features = ["async"] }
regex = "~1"
async-recursion = "~1"
chrono = "~0.4"
rand = "~0.10"
bs58 = "~0.5"
ariadne = "~0.6"
async-trait = "~0.1"
uuid = { version = "~1", features = ["v4"] }
clap = { version = "~4" }
quick-junit = "~0.5"
serde = { version = "~1", features = ["derive"] }
toml = "~0.8"
walkdir = "~2"
colored = "~2"
tabled = "~0.18"
terminal_size = "~0.4"
