[workspace]
members = [
    "crates/relux-core",
    "crates/relux-ast",
    "crates/relux-lexer",
    "crates/relux-parser",
    "crates/relux-ir",
    "crates/relux-resolver",
    "crates/relux-runtime",
    "crates/relux-cli",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
description = "Expect-style integration test framework for interactive shell programs"
license = "MIT"
repository = "https://github.com/shizzard/relux"
homepage = "https://shizzard.github.io/relux/"
readme = "README.md"
keywords = ["testing", "integration-testing", "expect", "pty", "shell"]
categories = ["development-tools::testing"]

[workspace.dependencies]
# ── Internal crates ──
relux-core     = { path = "crates/relux-core", version = "0.5.0" }
relux-ast      = { path = "crates/relux-ast", version = "0.5.0" }
relux-lexer    = { path = "crates/relux-lexer", version = "0.5.0" }
relux-parser   = { path = "crates/relux-parser", version = "0.5.0" }
relux-ir       = { path = "crates/relux-ir", version = "0.5.0" }
relux-resolver = { path = "crates/relux-resolver", version = "0.5.0" }
relux-runtime  = { path = "crates/relux-runtime", version = "0.5.0" }

# ── External deps ──
logos           = { version = "~0.16" }
chumsky         = { version = "~0.12" }
humantime       = { version = "~2.3" }
mime_guess      = "~2"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "process", "sync"] }
pty-process     = { version = "~0.5", features = ["async"] }
regex           = "~1"
async-recursion = "~1"
chrono          = "~0.4"
rand            = "~0.10"
bs58            = "~0.5"
ariadne         = { version = "~0.6", features = ["auto-color"] }
async-trait     = "~0.1"
uuid            = { version = "~1", features = ["v4"] }
clap            = { version = "~4" }
clap_complete   = { version = "~4", features = ["unstable-dynamic"] }
quick-junit     = "~0.5"
serde           = { version = "~1", features = ["derive"] }
serde_json      = "~1"
ts-rs           = "~10"
toml            = "~0.8"
walkdir         = "~2"
colored         = "~2"
tabled          = "~0.18"
terminal_size   = "~0.4"
bytes           = "~1.11"
thiserror       = "~2"
elsa            = "~1.11"
tokio-util      = { version = "~0.7", features = ["rt"] }
futures         = "~0.3"
flate2          = { version = "~1", default-features = false, features = ["rust_backend"] }
base64          = "~0.22"
