[package]
name = "relux-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal: core types for Relux. No semver guarantees."

[dependencies]
elsa      = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
ariadne   = { workspace = true }
walkdir   = { workspace = true }
uuid      = { workspace = true }
rand      = { workspace = true }
bs58      = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
