[package]
name = "relux-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Parser for Relux"

[dependencies]
relux-core  = { workspace = true }
relux-lexer = { workspace = true }
relux-ast   = { workspace = true }
chumsky     = { workspace = true }
thiserror   = { workspace = true }
humantime   = { workspace = true }
