[package]
name = "relux-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Resolver for Relux"

[dependencies]
relux-core   = { workspace = true }
relux-ast    = { workspace = true }
relux-ir     = { workspace = true }
relux-lexer  = { workspace = true }
relux-parser = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
