[package]
name = "relux-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Runtime for Relux"

[dependencies]
relux-core      = { workspace = true }
relux-ir        = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
pty-process     = { workspace = true }
regex           = { workspace = true }
async-recursion = { workspace = true }
chrono          = { workspace = true }
async-trait     = { workspace = true }
colored         = { workspace = true }
quick-junit     = { workspace = true }
serde           = { workspace = true }
toml            = { workspace = true }
bytes           = { workspace = true }
futures         = { workspace = true }
terminal_size   = { workspace = true }
humantime       = { workspace = true }
