[package]
name = "relux-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal: runtime for Relux. No semver guarantees."

[features]
# Enable ts-rs `#[ts(export)]` attributes; activates auto-injected
# `export_bindings_<TypeName>` tests that write `.ts` files into
# `viewer/src/types/`. Driven by `just viewer-types`.
ts-export = []

[dependencies]
relux-core      = { workspace = true }
relux-ir        = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
pty-process     = { workspace = true }
regex           = { workspace = true }
async-recursion = { workspace = true }
chrono          = { workspace = true }
async-trait     = { workspace = true }
colored         = { workspace = true }
quick-junit     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
ts-rs           = { workspace = true }
toml            = { workspace = true }
bytes           = { workspace = true }
futures         = { workspace = true }
terminal_size   = { workspace = true }
humantime       = { workspace = true }
flate2          = { workspace = true }
base64          = { workspace = true }
walkdir         = { workspace = true }
mime_guess      = { workspace = true }
