[package]
name = "rdp-client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync"] }
tokio-tungstenite = "0.26"
futures-util      = "0.3"
clap              = { version = "4", features = ["derive"] }
serde_json        = "1"
thiserror         = "2"
